--- a/Framework/Clients/HttpClient/HttpClient.csproj
+++ b/Framework/Clients/HttpClient/HttpClient.csproj
@@ -5,6 +5,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="CodeFoxtrot.ConsoleLogger" Version="1.0.3" />
+    <PackageReference Include="HttpTracer" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="RestSharp" Version="108.0.3" />
   </ItemGroup>
